[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "qnsp"
version = "0.3.0"
description = "Official Python SDK for the QNSP Quantum-Native Security Platform — post-quantum cryptography (ML-KEM, ML-DSA, SLH-DSA, Falcon via liboqs), PQC-encrypted vault, KMS, and immutable audit trails. Mirrors the @cuilabs/qnsp-* TypeScript SDKs."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "CUI LABS (PTE.) LTD.", email = "engineering@cuilabs.io" },
]
keywords = [
  "qnsp",
  "post-quantum",
  "post-quantum-cryptography",
  "pqc",
  "vault",
  "kms",
  "audit",
  "compliance",
  "fips-203",
  "fips-204",
  "fips-205",
  "ml-kem",
  "ml-dsa",
  "slh-dsa",
  "falcon",
  "liboqs",
  "quantum-safe",
  "zero-trust",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security :: Cryptography",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1.0",
  "PyJWT>=2.8,<3.0",
]

[project.optional-dependencies]
# Local PQC primitives — wraps liboqs via the open-quantum-safe Python binding.
# `liboqs-python` 0.12.0 expects the liboqs C library to be discoverable on the
# system. Inside the QNSP monorepo this is satisfied automatically by
# `tooling/liboqs-src/build/`. End users install via:
#   - macOS:   brew install liboqs   &&  pip install 'qnsp[crypto]'
#   - Debian:  apt install liboqs-dev && pip install 'qnsp[crypto]'
#   - Other:   build liboqs from source (see https://github.com/open-quantum-safe/liboqs)
# A v0.3.x follow-up will ship cibuildwheel-built wheels that bundle a fully
# self-contained liboqs binary — same model as @cuilabs/liboqs-native's prebuilds/.
crypto = [
  "liboqs-python==0.12.0",
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "mypy>=1.10",
  "ruff>=0.6",
]
all = [
  "qnsp[crypto]",
]

[project.urls]
Homepage = "https://cloud.qnsp.cuilabs.io"
Documentation = "https://docs.qnsp.cuilabs.io/sdk/python"
Repository = "https://github.com/cuilabs/qnsp-public"
Issues = "https://github.com/cuilabs/qnsp-public/issues"
Changelog = "https://github.com/cuilabs/qnsp-public/blob/main/sdks/python/qnsp/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/qnsp"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE", "pyproject.toml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
